DEV-Microk8s/nginx_deployment (wiki)/nginx-deployment.yaml
# --- Nginx Deployment ---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment # Name for the Deployment
  namespace: nginx
  labels:
    app: nginx
spec:
  replicas: 3
  revisionHistoryLimit: 2  # Max number of replicasets
  selector:
    matchLabels:
      app: nginx # Must match labels on the Pod template
  template:
    metadata:
      labels:
        app: nginx # Labels applied to the Pod(s)
    spec:
      #securityContext: # Need to add to run container as admin since NFS share is set to Map as admin.
        #runAsUser: 1024           #Running as admin
        #runAsGroup: 1024          #Running as admin
        #fsGroup: <Group_GID>
      containers:
      - name: nginx # Name for the container
        # Use a specific version tag is recommended over latest
        image: nginx:1.31.6 # updated (9/18/26) - Moved to stable
        ports:
        - containerPort: 80
          name: nginx-http # Name for the port
        volumeMounts:
        - name: nginx-data # Must match the volume name defined below
          # Mount path inside the container as requested
          mountPath: /usr/share/nginx/html # default storage location for nginx
        # --- Optional but Recommended: Resource Limits ---
        resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "1000m" # 1 CPU core
      volumes:
        # Define the volume that uses the PVC
      - name: nginx-data # Must match volumeMounts.name above
        persistentVolumeClaim:
          # Must match the metadata.name of the PVC defined above
          claimName: nginx-pvc
