DEV-Microk8s/nginx_deployment (wiki)/nginx-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-external
  namespace: nginx
spec:
  selector:
    app: nginx # This label should match your Deployment's pod labels
  ports:
    - protocol: TCP
      port: 80       # External port for the Service (what you connect to)
      targetPort: 80 # Internal port of the container deployment
      name: http
  type: LoadBalancer 
  loadBalancerIP: 10.0.100.5 #target IP for the service.
# test to see if can direct to container deployment without specifing the port.
